--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "dependencies": {
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
-    "@nestjs/microservices": "^8.0.6",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^7.6.15",
     "axios": "^0.21.3",
     "dotenv": "^10.0.0",
     "helmet": "^4.6.0",
+    "passport": "^0.4.1",
+    "passport-oauth2": "^1.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
@@ -39,6 +41,8 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
+    "@types/passport": "^1.0.7",
+    "@types/passport-oauth2": "^1.4.11",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
