--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ PORT=3000
 GATEWAY_TIMEOUT=10000
 DEVGUILD_USER_SERVICE_URL=localhost:7000
 DEVGUILD_PROJECT_SERVICE_URL=localhost:6000
+JWT_SECRET=secret
+JWT_EXPIRES_IN=1d
